          (thanks to Lim Ding Wen)
- #466    Ignore empty exclusion ranges
- #468    Refactor interval filtering
- #469    Do not leak IntervalFilters in IntervalFilterAndGroup
          (thanks to Shaun Ruffel)
- #470    Do not leak filter in IntervalFilterFirstOf
          (thanks to Shaun Ruffel)
- #474    Make display of ids and annotations in summary report configurable
- #478    Add support for XDG Base Directory specification on Unixes
          (Thanks to Stanisław Wysocki)
- #491    Tracking an interval in the future while actively tracking time results in a database inconsistency
          (thanks to agentcoffee)
- #505    Report 'totals.py' does not truncate intervals to report range
          (thanks to eq0cdk)
- #510    Export intervals by IDs
          (thanks to Scott Mcdermott)
- #512    help.t fails on alpine with mandoc package
          (thanks to Edd Salkield)
-         Add option '--details' to 'test/problems' script

------ current release ---------------------------

1.4.3 (2021-05-28) - fc618636aacba6e52d447b482aeef58b375dfc8c

- #159    Tags enclosed in escaped double-quotes are not handled correctly
          (thanks to Shaun Ruffell)
- #379    CmdSummary: Fix calculation of display start in summary table
          (thanks to Shaun Ruffell)
- #387    Fixed URL for tarball download
          (thanks to Joerg Kastning)
- #390    dom.tracked.X.tag.Y always returns dom.tracked.1.tag.Y
          (thanks to pweaver2019)
- #393    Update dark_blue.theme
          (thanks to Peter Zuidema)
- #398    test: Thread.isAlive() -> Thread.is_alive()
          (thanks to Shaun Ruffell)
- #410    Replace roff man pages with asciidoctor
- #411    Transfer platform testing from Travis CI to Github Actions
- #416    Internal error. Failed encode / decode check when doing undo
          (thanks to narudarurarasya, Shaun Ruffel)
- #419    Links not preserved over linebreaks in man page
          (thanks to draupadi77)