@@ -104,3 +104,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   eq0cdk
   squirrellyDave
   Edd Salkield
+  Oivvio Polite
