@@ -18,3 +18,14 @@ This does however assume there is a 'foo' extension installed.
 
 The return code is the return code of the extension.
 If the extension produces no output and a non-zero rc, then 255 is returned.
+
+== CONFIGURATION
+
+**reports.range**::
+Sets the default date range for all reports.
+The value has to be a range hint, see timew-hints(7).
+Defaults to `:all`
+
+**reports.**__<name>__**.range**::
+Set the date range for report _name_, where _name_ is the name of the report executable without its extension (i.e. a report executable 'foo.py' is referred to by 'foo').
+The value has to be a range hint, see timew-hints(7).
