@@ -48,8 +48,11 @@ int CmdChartDay (
   Rules& rules,
   Database& database)
 {
+  auto default_hint = rules.get ("reports.range", ":day");
+  auto report_hint = rules.get ("reports.day.range", default_hint);
+
   Range default_range = {};
-  expandIntervalHint (rules.get ("reports.day.range", ":day"), default_range);
+  expandIntervalHint (report_hint, default_range);
 
   // Create a filter, and if empty, choose the current day.
   auto filter = cli.getFilter (default_range);
@@ -63,8 +66,11 @@ int CmdChartWeek (
   Rules& rules,
   Database& database)
 {
+  auto default_hint = rules.get ("reports.range", ":week");
+  auto report_hint = rules.get ("reports.week.range", default_hint);
+
   Range default_range = {};
-  expandIntervalHint (rules.get ("reports.week.range", ":week"), default_range);
+  expandIntervalHint (report_hint, default_range);
 
   // Create a filter, and if empty, choose the current week.
   auto filter = cli.getFilter (default_range);
@@ -78,8 +84,11 @@ int CmdChartMonth (
   Rules& rules,
   Database& database)
 {
+  auto default_hint = rules.get ("reports.range", ":month");
+  auto report_hint = rules.get ("reports.month.range", default_hint);
+
   Range default_range = {};
-  expandIntervalHint (rules.get ("reports.month.range", ":month"), default_range);
+  expandIntervalHint (report_hint, default_range);
 
   // Create a filter, and if empty, choose the current month.
   auto filter = cli.getFilter (default_range);
